[gd_scene load_steps=20 format=3 uid="uid://byj5pr0p1qy3n"]

[ext_resource type="Script" uid="uid://dwok2ua5cvlro" path="res://Scripts/camera.gd" id="1_l1bl0"]
[ext_resource type="Texture2D" uid="uid://bp2hp57tc8aen" path="res://Art/Camera/happy_people_on_plane_px.png" id="2_2ysbw"]
[ext_resource type="Texture2D" uid="uid://b8aqr303wqtxj" path="res://Art/Camera/shocked_people_on_plane_px.png" id="3_0v8vy"]
[ext_resource type="Texture2D" uid="uid://bm8nwd7ip1v8g" path="res://Art/Placeholders/Jak vs Dave.png" id="3_shqlg"]
[ext_resource type="AudioStream" uid="uid://dm0cdmvfqv8gu" path="res://Audio/SoundEffects/Alarm Blare.wav" id="4_0v8vy"]
[ext_resource type="Texture2D" uid="uid://bas8e64fa333g" path="res://Art/Placeholders/garif.jpg" id="4_tpi20"]
[ext_resource type="Texture2D" uid="uid://bvsmb41b770ca" path="res://Art/Placeholders/stormo.jpg" id="5_cq81y"]
[ext_resource type="Texture2D" uid="uid://buvf7va4nj50h" path="res://Art/Placeholders/Big Dave.jpg" id="7_kme37"]
[ext_resource type="Texture2D" uid="uid://cdpdryym33i4d" path="res://Art/BG/Camera/CameraFrame.png" id="8_cq81y"]
[ext_resource type="Texture2D" uid="uid://dltmv8in5xjdp" path="res://Art/BG/Camera/PlaneCamIcon.png" id="9_2ysbw"]
[ext_resource type="Texture2D" uid="uid://cl7nvndqlxxtc" path="res://Art/BG/Camera/TextBoxBig.png" id="10_0v8vy"]
[ext_resource type="Texture2D" uid="uid://dutykiy7snk07" path="res://Art/BG/Camera/TextBoxSmall.png" id="11_bbha4"]

[sub_resource type="Gradient" id="Gradient_bbha4"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i6k7c"]
gradient = SubResource("Gradient_bbha4")

[sub_resource type="Animation" id="Animation_bbha4"]
resource_name = "flashing camera"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Sprite2D2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.670588, 0, 0, 0), Color(0.670588, 0, 0, 0.435294), Color(0.670588, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i6k7c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Sprite2D2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.670588, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ceagg"]
_data = {
&"RESET": SubResource("Animation_i6k7c"),
&"flashing camera": SubResource("Animation_bbha4")
}

[sub_resource type="LabelSettings" id="LabelSettings_i6k7c"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_ceagg"]
font_size = 10

[node name="Camera" type="Node2D"]
script = ExtResource("1_l1bl0")

[node name="Cam 1" type="Node2D" parent="."]
position = Vector2(60, -1)

[node name="State 1" type="Sprite2D" parent="Cam 1"]
visible = false
position = Vector2(516, 325)
scale = Vector2(1.92, 1.62)
texture = ExtResource("2_2ysbw")

[node name="State 2" type="Sprite2D" parent="Cam 1"]
position = Vector2(517.5, 325.5)
scale = Vector2(1.9214, 1.61347)
texture = ExtResource("3_0v8vy")

[node name="Sprite2D" type="Sprite2D" parent="Cam 1/State 2"]
modulate = Color(0, 0, 0, 0.686275)
position = Vector2(-1.16705, 0.734146)
scale = Vector2(9.3477, 6.30079)
texture = SubResource("GradientTexture2D_i6k7c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cam 1/State 2"]
libraries = {
&"": SubResource("AnimationLibrary_ceagg")
}
autoplay = "flashing camera"
speed_scale = 1.5

[node name="Sprite2D2" type="Sprite2D" parent="Cam 1/State 2/AnimationPlayer"]
modulate = Color(0.670588, 0, 0, 0)
position = Vector2(575.258, 325.685)
scale = Vector2(17.9607, 10.1661)
texture = SubResource("GradientTexture2D_i6k7c")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Cam 1/State 2/AnimationPlayer"]
stream = ExtResource("4_0v8vy")
autoplay = true

[node name="Cam 2" type="Node2D" parent="."]
visible = false

[node name="State 1" type="Sprite2D" parent="Cam 2"]
position = Vector2(10.5, -5.5)
scale = Vector2(0.769531, 0.461719)
texture = ExtResource("3_shqlg")

[node name="State 2" type="Sprite2D" parent="Cam 2"]
visible = false
position = Vector2(7.50002, -4.49997)
scale = Vector2(1.91, 1.09925)
texture = ExtResource("5_cq81y")

[node name="Cam 3" type="Node2D" parent="."]
visible = false

[node name="State 1" type="Sprite2D" parent="Cam 3"]
position = Vector2(12.5, 5)
scale = Vector2(3.15667, 3.29762)
texture = ExtResource("4_tpi20")

[node name="State 2" type="Sprite2D" parent="Cam 3"]
visible = false
position = Vector2(12.5, -6.25)
scale = Vector2(1.62417, 1.43548)
texture = ExtResource("7_kme37")

[node name="Background" type="Node2D" parent="."]

[node name="Camera Border" type="Sprite2D" parent="Background"]
position = Vector2(573.125, 321)
scale = Vector2(1.08035, 1.00156)
texture = ExtResource("8_cq81y")

[node name="Plane" type="Sprite2D" parent="Background"]
position = Vector2(903, 533)
texture = ExtResource("9_2ysbw")

[node name="Node2D" type="Node2D" parent="Background"]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-444, -218)

[node name="Cam 1" type="Sprite2D" parent="Node2D"]
position = Vector2(1218, 784)
texture = ExtResource("10_0v8vy")

[node name="Button" type="Button" parent="Node2D/Cam 1"]
anchors_preset = -1
anchor_left = -0.370968
anchor_right = 0.16129
anchor_bottom = 0.255814
offset_left = -15.0
offset_top = -21.0
offset_right = 42.0
offset_bottom = 10.0
flat = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Node2D/Cam 1"]
offset_left = -53.0
offset_top = -15.0
offset_right = 62.0
offset_bottom = 16.0
text = "Em.  Door"
label_settings = SubResource("LabelSettings_i6k7c")

[node name="Label2" type="Label" parent="Node2D/Cam 1"]
offset_left = -62.0
offset_top = -34.0
offset_right = 4.0
offset_bottom = -11.0
text = "Cam: 01"
label_settings = SubResource("LabelSettings_ceagg")

[node name="Cam 2" type="Sprite2D" parent="Node2D"]
position = Vector2(1470, 720)
texture = ExtResource("10_0v8vy")

[node name="Button2" type="Button" parent="Node2D/Cam 2"]
anchors_preset = -1
anchor_right = 0.540323
anchor_bottom = 0.27907
offset_left = -62.0
offset_top = -22.0
offset_right = -5.0
offset_bottom = 9.0
flat = true
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Node2D/Cam 2"]
offset_left = -42.0
offset_top = -16.0
offset_right = 73.0
offset_bottom = 15.0
text = "Engines"
label_settings = SubResource("LabelSettings_i6k7c")

[node name="Label3" type="Label" parent="Node2D/Cam 2"]
offset_left = -62.0
offset_top = -34.0
offset_right = 4.0
offset_bottom = -11.0
text = "Cam: 02"
label_settings = SubResource("LabelSettings_ceagg")

[node name="Cam 3" type="Sprite2D" parent="Node2D"]
position = Vector2(1468, 796)
texture = ExtResource("11_bbha4")

[node name="Button3" type="Button" parent="Node2D/Cam 3"]
anchors_preset = -1
anchor_right = 0.675
anchor_bottom = 0.285714
offset_left = -80.0
offset_top = -22.0
offset_right = -28.0
offset_bottom = 9.0
flat = true
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Node2D/Cam 3"]
offset_left = -58.0
offset_top = -16.0
offset_right = 61.0
offset_bottom = 15.0
text = "Main Cabin"
label_settings = SubResource("LabelSettings_i6k7c")

[node name="Label3" type="Label" parent="Node2D/Cam 3"]
offset_left = -80.0
offset_top = -34.0
offset_right = -14.0
offset_bottom = -11.0
text = "Cam: 03"
label_settings = SubResource("LabelSettings_ceagg")

[connection signal="pressed" from="Node2D/Cam 1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Node2D/Cam 2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Node2D/Cam 3/Button3" to="." method="_on_button_3_pressed"]
